# cmake_example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
MyApp/: CMakeLists.txt
MyApp/cmake_modules/: FindMyLib.cmake  FindThirdPartyLib.cmake
MyApp/src/: CMakeLists.txt  main.cpp
MyApp/tests/: CMakeLists.txt  CMakeLists.txt.in  unit_test.cpp
MyHeaderLib/: CMakeLists.txt
MyHeaderLib/include/MyHeaderLib/: utils.h
MyLib/: CMakeLists.txt
MyLib/include/MyLib/: printer.h
MyLib/src/: printer.cpp
ThirdPartyLib/: CMakeLists.txt  CMakeLists.txt.in
ThirdPartyLib/include/ThirdPartyLib/: third_party_lib.h
ThirdPartyLib/src/: CMakeLists.txt  third_party_lib.cpp
ThirdPartyLib/tests/: CMakeLists.txt  unit_test.cpp
cmake_modules/: FindFoo.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt  unit_test.cpp
